Issue #2312851 by dpfitzsi, DrColossos, sk33lz, Jody Lynn: Linkit modal hiding behind panels modal

--- a/css/linkit.css
+++ b/css/linkit.css
@@ -88,3 +88,7 @@
 span.mceIcon.mce_linkit {
   background: transparent url(../editors/tinymce/images/linkit.png) no-repeat 0 0;
 }
+
+.ui-dialog.ui-front.linkit-wrapper {
+  z-index: 2000;
+}
